# Game-of-Life

./: .gitignore  CMakeLists.txt  Game-of-Life.cpp  README.md
source/: BitStorage.cpp  BitStorage.h  DrawBoard.cpp  DrawBoard.h  LifeBoard.cpp  LifeBoard.h  LifeBoardDrawing.cpp  LifeBoardDrawing.h  LifeBoardLogic.cpp  LifeBoardLogic.h
